UPDATE renamed FormatInterface, changed deprecated methods, removed format checking in AudioFileConversion